--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="weekly">Weekly</string>
     <string name="time">time</string>
     <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="alarm_sounds">Alarm Sounds</string>
+    <string name="minion">Minion</string>
+    <string name="circle_of_life">Circle of Life</string>
 
 
 </resources>
